--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   #sidebar button:hover { background:#444; }
   #content { margin-left:200px; padding:20px; transition:0.3s; overflow:auto; min-height:100vh; }
   #sidebar.hide + #content { margin-left:0; }
-  #hamburger { position:fixed; top:10px; left:10px; font-size:24px; cursor:pointer; color:#333; z-index:3; transition:0.3s; }
-  #hamburger.collapsed { color:#fff; }
+  #hamburger { position:fixed; top:10px; left:10px; font-size:24px; cursor:pointer; color:green; z-index:3; transition:0.3s; }
   h1 { text-align:center; }
   label { font-weight:bold; display:block; margin-top:10px; }
   input, button, textarea { margin:5px 0; padding:8px; font-size:16px; width:100%; }
@@ -30,9 +29,21 @@
   #loading { display:none; color:#007bff; font-weight:bold; }
   .generator { display:none; }
   textarea { min-height:60px; }
+
+  /* Disclaimer */
+  #disclaimer {
+    background:#ffcc00; color:#333; padding:10px; text-align:center; font-weight:bold; position:fixed; top:0; left:0; width:100%; z-index:5;
+  }
+  #disclaimer span { float:right; cursor:pointer; font-weight:bold; }
 </style>
 </head>
 <body>
+
+<!-- Disclaimer -->
+<div id="disclaimer">
+  ⚠️ This is a demo application. All generated content is for reference only.
+  <span onclick="hideDisclaimer()">✖</span>
+</div>
 
 <div id="hamburger">☰</div>
 
@@ -41,6 +52,7 @@
   <button onclick="showGenerator('caption')">Caption Generator</button>
   <button onclick="showGenerator('meme')">Meme Generator</button>
   <button onclick="showGenerator('bio')">Bio Generator</button>
+  <button onclick="showDashboard()">Dashboard</button>
 </div>
 
 <div id="content">
@@ -53,11 +65,8 @@
   <label>Select Languages:</label>
   <div class="language-buttons" id="caption-langs">
     <div class="lang-btn selected" data-lang="English">English</div>
-    <div class="lang-btn selected" data-lang="Spanish">Spanish</div>
     <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
-    <div class="lang-btn" data-lang="French">French</div>
-    <div class="lang-btn" data-lang="German">German</div>
-    <div class="lang-btn" data-lang="Kannada">Kannada</div>
+    <div class="lang-btn selected" data-lang="Kannada">Kannada</div>
   </div>
   <label>Number of Captions:</label>
   <input type="number" id="caption-count" value="5" min="1" max="20">
@@ -77,8 +86,8 @@
   <label>Select Languages:</label>
   <div class="language-buttons" id="meme-langs">
     <div class="lang-btn selected" data-lang="English">English</div>
+    <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
     <div class="lang-btn selected" data-lang="Kannada">Kannada</div>
-    <div class="lang-btn" data-lang="Hindi">Hindi</div>
   </div>
   <label>Number of Memes:</label>
   <input type="number" id="meme-count" value="3" min="1" max="10">
@@ -98,8 +107,8 @@
   <label>Select Languages:</label>
   <div class="language-buttons" id="bio-langs">
     <div class="lang-btn selected" data-lang="English">English</div>
+    <div class="lang-btn selected" data-lang="Hindi">Hindi</div>
     <div class="lang-btn selected" data-lang="Kannada">Kannada</div>
-    <div class="lang-btn" data-lang="Hindi">Hindi</div>
   </div>
   <button onclick="generateBio()">Generate Bios</button>
   <div id="bio-loading">Generating bios... ⏳</div>
@@ -109,14 +118,26 @@
   </table>
 </div>
 
+<!-- Dashboard -->
+<div id="dashboard" class="generator">
+  <h1>Dashboard</h1>
+  <div id="guest-welcome"></div>
+  <button id="logout-btn" style="display:none;" onclick="logout()">Logout</button>
+  <div id="analytics" style="margin-top:20px;">
+    <p><b>Followers:</b> <span id="followers-count">0</span></p>
+    <p><b>Engagement Rate:</b> <span id="engagement-rate">0%</span></p>
+    <p><b>Posts Per Week:</b> <span id="posts-week">0</span></p>
+  </div>
+</div>
+
 </div>
 
 <script>
+// Sidebar toggle
 const hamburger = document.getElementById('hamburger');
 const sidebar = document.getElementById('sidebar');
 hamburger.addEventListener('click', ()=>{
   sidebar.classList.toggle('hide');
-  hamburger.classList.toggle('collapsed');
 });
 
 // Show generator
@@ -124,7 +145,10 @@ function showGenerator(id) {
   document.querySelectorAll('.generator').forEach(g=>g.style.display='none');
   document.getElementById(id).style.display='block';
 }
-showGenerator('caption'); // default
+
+// Disclaimer
+function hideDisclaimer() { document.getElementById('disclaimer').style.display='none'; }
+setTimeout(()=>{ hideDisclaimer(); },10000);
 
 // Language toggle
 document.querySelectorAll('.language-buttons').forEach(div=>{
@@ -215,6 +239,36 @@ function displayTable(type,data,langs){
   });
   document.getElementById(type+'-table').style.display='table';
 }
+
+// Dashboard & guest login
+function showDashboard() {
+  showGenerator('dashboard');
+  let guestName = sessionStorage.getItem('guestName');
+  if(!guestName){
+    guestName = prompt("Enter your name for Guest login:", "Guest User");
+    if(!guestName) guestName = "Guest User";
+    sessionStorage.setItem('guestName', guestName);
+  }
+  document.getElementById('guest-welcome').innerHTML = "Welcome, " + guestName + "!";
+  document.getElementById('logout-btn').style.display = 'inline-block';
+  generateDummyAnalytics();
+}
+function logout(){
+  sessionStorage.removeItem('guestName');
+  alert("You have been logged out!");
+  location.reload();
+}
+function generateDummyAnalytics(){
+  const followers = Math.floor(Math.random()*10000 + 500);
+  const engagement = (Math.random()*10 + 1).toFixed(2);
+  const posts = Math.floor(Math.random()*10 + 1);
+  document.getElementById('followers-count').textContent = followers;
+  document.getElementById('engagement-rate').textContent = engagement + "%";
+  document.getElementById('posts-week').textContent = posts;
+}
+
+// Default view
+showGenerator('caption');
 </script>
 
 </body>
